--- a/frontend/src/Components/Button.css
+++ b/frontend/src/Components/Button.css
@@ -41,3 +41,23 @@
   color: #242424;
   transition: 250ms;
 }
+
+.button:disabled,
+.button:hover:disabled,
+.button:active:disabled {
+  background: #ccc;
+  color: #979797;
+  border-color: #ccc;
+  cursor: not-allowed;
+}
+
+.button--inverse {
+  background: transparent;
+  color: #ff0055;
+}
+
+.button--inverse:hover,
+.button--inverse:active {
+  color: white;
+  background: #ff0055;
+}
