--- a/frontend/src/Components/pages/Auth.css
+++ b/frontend/src/Components/pages/Auth.css
@@ -14,3 +14,16 @@
 .authentication form {
   margin-bottom: 1rem;
 }
+
+.login-form {
+  max-width: 300px;
+}
+.login-form-forgot {
+  float: right;
+}
+.ant-col-rtl .login-form-forgot {
+  float: left;
+}
+.login-form-button {
+  width: 100%;
+}
